# Power_System_State_Estimation_with_CUDA

./: .clangd  .gitignore  ALGORITHM_ANALYSIS.md  CMakeLists.txt  Doxyfile  README.md  setup_ide.bat  setup_ide.ps1
.github/workflows/: ci.yml  msbuild.yml
cmake/: CudaToolchain.cmake
docs/: API.md  BUG_FIXES.md  BUILD_CUDA.md  COMPILERS.md  CPU_PARALLELIZATION.md  DOXYGEN.md  DYNAMIC_UPDATES.md  EASY_USAGE.md  ETAP_COMPARISON.md  EXAMPLES_COMPARISON.md  FEATURES.md  INDEX.md  IO_FORMATS.md  MEASURED_VS_ESTIMATED.md  MEASUREMENT_DEVICES.md  MODEL_FORMAT.md  PERFORMANCE.md  REALTIME.md  SETTERS_GETTERS.md  USAGE.md
examples/: CMakeLists.txt  advanced_features_example.cpp  advancedsetup.cpp  basic_example.cpp  compare_measured_estimated.cpp  hybrid_robust_example.cpp  hybridsetup.cpp  observability_example.cpp  offlinesetup.cpp  realtime_example.cpp  realtimesetup.cpp
examples/ieee14/: README.md  devices.csv  measurements.csv
include/sle/: Export.h  StateEstimator.h  Types.h
include/sle/baddata/: BadDataDetector.h  DataConsistencyChecker.h
include/sle/cuda/: CudaDataManager.h  CudaMemoryManager.h  CudaMemoryMonitor.h  CudaNetworkUtils.h  CudaPowerFlow.h  CudaReduction.h  CudaSolverOps.h  CudaSparseOps.h  CudaUtils.h  CudaVectorOps.h  CudaWeightedOps.h  UnifiedCudaMemoryPool.h
include/sle/interface/: MeasurementLoader.h  ModelLoader.h  Results.h  StateEstimator.h  TelemetryProcessor.h
include/sle/io/: ComparisonReport.h  IEEEFormatParser.h  JSONParser.h  OutputFormatter.h  PMUData.h  PMUParser.h  SCADAParser.h
include/sle/math/: CuSOLVERIntegration.h  JacobianMatrix.h  LoadFlow.h  MeasurementFunctions.h  OptimizedMath.h  RobustEstimator.h  Solver.h  SparseMatrix.h
include/sle/measurements/: PseudoMeasurementGenerator.h  VirtualMeasurementGenerator.h
include/sle/model/: Branch.h  Bus.h  CircuitBreaker.h  DeviceModel.h  MeasurementDevice.h  MeasurementModel.h  NetworkModel.h  StateVector.h  TelemetryData.h
include/sle/multiarea/: MultiAreaEstimator.h
include/sle/observability/: ObservabilityAnalyzer.h  OptimalPlacement.h
include/sle/utils/: CompileTimeConfig.h  EstimationComparator.h  LoadDistributor.h  TemplateHelpers.h
src/baddata/: BadDataDetector.cpp  DataConsistencyChecker.cpp
src/cuda/: CudaDataManager.cu  CudaJacobianKernels.cu  CudaKernels.cu  CudaMeasurementKernels.cu  CudaMemoryManager.cpp  CudaMemoryMonitor.cu  CudaNetworkKernels.cu  CudaNetworkUtils.cu  CudaPrecisionHelpers.h  CudaReduction.cu  CudaSolverOps.cu  CudaSparseOps.cu  CudaVectorOps.cu  CudaWeightedOps.cu  UnifiedCudaMemoryPool.cu
src/interface/: MeasurementLoader.cpp  ModelLoader.cpp  Results.cpp  StateEstimator.cpp  TelemetryProcessor.cpp
src/io/: ComparisonReport.cpp  IEEEFormatParser.cpp  JSONParser.cpp  OutputFormatter.cpp  PMUData.cpp  PMUParser.cpp  SCADAParser.cpp
src/math/: CuSOLVERIntegration.cu  JacobianMatrix.cu  LoadFlow.cu  MeasurementFunctions.cu  RobustEstimator.cu  Solver.cu  SparseMatrix.cu
src/measurements/: PseudoMeasurementGenerator.cpp  VirtualMeasurementGenerator.cpp
src/model/: Branch.cpp  Bus.cpp  CircuitBreaker.cpp  DeviceModel.cpp  MeasurementDevice.cpp  MeasurementModel.cpp  NetworkModel.cpp  StateVector.cpp  TelemetryData.cpp
src/multiarea/: MultiAreaEstimator.cpp
src/observability/: ObservabilityAnalyzer.cpp  OptimalPlacement.cpp
src/utils/: EstimationComparator.cpp  LoadDistributor.cpp
